<resources>
    <string name="app_name">app4</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="launch_screen">Launch Screen</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="outside_services">Outside Services</string>
    <string name="garage_services">Garage Services</string>
    <string name="list_requests">Request List</string>
    <string name="profile">Profile</string>
    <string name="Help_center">Help Center</string>
    <string name="services">Services</string>
    <string name="mechanic">Mechanic</string>
    <string name="request">Request</string>
    <string name="help">Help</string>
    <string name="chat">Chat</string>
    <string name="help_line">Help Line</string>
    <string name="faq">FAQ</string>
    <string name="links">Links</string>
    <string name="msngr">Messenger</string>
    <string name="insta">Instagram</string>
    <string name="wassap">Whatsapp</string>
    <string name="default_info_title">Default info title</string>
    <string name="default_info_snippet">Default info snippet</string>
    <string name="pick_place">Pick a place</string>
    <string name="signin">Sign In</string>
    <string name="skip">"Continue  "</string>
    <string name="skipp">Whitout Log In</string>
    <string name="checkup">Check Up</string>
    <string name="cancel">Cancel</string>
    <string name="cleaning">Cleaning</string>
    <string name="spin">SPIn</string>
    <string name="profil">Profile</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="adress">Address</string>
    <string name="chatt">24/7</string>
    <string name="helpp">anyhelp</string>
    <string name="faqq">Find Answers To Your Questions</string>
    <string name="instaa">Join Us On Instagram</string>
    <string name="wassapp">Join Us On Whatsapp</string>
    <string name="fb">Join Us On Facebook</string>
    <string name="option_get_place">Get Place</string>
    <string name="APIkey">AIzaSyAdj5-qiFyxzg19l13JzDN-oSNFxVNDpvw</string>
    <string name="team">Team</string>
    <string name="appointment">Appointment</string>
    <string name="Lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="address">Address</string>
    <string name="FASTrep">FASTrep</string>
    <string name="Next">Next</string>
    <string name="fuel">Fuel</string>
    <string name="oil">Oil</string>
    <string name="tow_truck">Tow Truck</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="code">Code</string>
    <string name="resend">Resend</string>
    <string name="requests">Requests</string>
    <string name="fastrep">Fastrep</string>
    <string name="garage">Garage</string>
    <string name="Fixper">Fixper</string>
    <string name="your_address">Your Address:</string>
    <string name="price">Price:</string>
    <string name="statee">State:</string>
    <string name="list_mechanics">List Mechanics</string>
    <string name="vehicule">Vehicule</string>
    <string name="tow">Tow</string>
    <string name="requested">Requested:</string>
    <string name="on">On</string>
    <string name="onn">On:</string>
    <string name="oil_fuel"><![CDATA[Oil & Fuel]]></string>
    <string name="type">Type:</string>
    <string name="mark">Mark:</string>
    <string name="list_taxi">List Taxi</string>
    <string name="list_stations">List Stations</string>
    <string name="vehicle">Vehicle</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="see_vehicles">See Vehicles</string>
    <string name="_213">+213</string>
    <string name="typee">Type:</string>
    <string name="markk">Mark:</string>
    <string name="modell">Model:</string>
    <string name="model">Model</string>
    <string name="matriculation_number">Matriculation Number:</string>
    <string name="garages">Garages</string>
    <string name="mechanics">Mechanics</string>
    <string name="stations">Stations</string>
    <string name="station">Station</string>
    <string name="your_vehicle">Your Vehicle</string>
    <string name="see_your_vehicles">See Your Vehicles</string>
    <string name="languages">Languages</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
</resources>