<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/biegish"
    tools:context=".profile">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/goback"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="left"
            android:background="@drawable/go_back"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/profile"
            android:layout_marginHorizontal="70dp"
            android:textSize="35sp"
            android:layout_weight="10"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:fontFamily="sans-serif-condensed-light"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_weight="1"
            android:background="@drawable/settings"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:gravity="center"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">
            <ImageView
                android:id="@+id/pfp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/profile_pic"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/buttonbg"
                    android:text="@string/edit"
                    android:textSize="18dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/profile_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginVertical="18dp"
                android:layout_marginHorizontal="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:shadowColor="#52000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="4"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/firstname"
                        android:textColor="@color/black"
                        android:enabled="false"
                        />
                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/Lastname"
                        android:textColor="@color/black"
                        android:enabled="false"/>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_marginTop="5dp"
                    android:shadowColor="#52000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="4"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/fphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/_213"
                        android:textColor="@color/black"
                        android:enabled="false"/>
                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:hint="@string/phone_number"
                        android:textColor="@color/black"
                        android:enabled="false"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginTop="5dp"
                    android:shadowColor="#52000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="4"/>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:enabled="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_marginTop="5dp"
                    android:shadowColor="#52000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="4"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/country"
                        android:textColor="@color/black"
                        android:enabled="false"/>
                    <EditText
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/city"
                        android:textColor="@color/black"
                        android:enabled="false"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/typee"/>
                <EditText
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/markk"/>
                <EditText
                    android:id="@+id/mark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modell"/>
                <EditText
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/matriculation_number"/>
                <EditText
                    android:id="@+id/matri_nbr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/matriculation_number"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="70dp"
        android:padding="10dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/blueish"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_weight="1"
            android:background="@drawable/home"/>
        <Button
            android:id="@+id/list_requests"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/history"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="60dp"
            android:clickable="false"
            android:background="@drawable/profile"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>