<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".launch_screen"
    android:background="@color/black"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="1024px"
            android:layout_height="1024px"
            android:background="@drawable/logonaked"
            android:layout_gravity="center"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="40dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/signup"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_marginTop="450dp"
                android:textAlignment="center"
                android:textSize="17dp"
                android:background="@drawable/buttonbg"/>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signin"
                        android:textColor="@color/white"
                        android:textSize="17dp"/>
                    <Button
                        android:id="@+id/signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@color/yellowish"
                        android:textSize="14dp"
                        android:padding="0dp"
                        style="?android:attr/borderlessButtonStyle"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">
                    <Button
                        android:id="@+id/continuee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skip"
                        android:textColor="@color/yellowish"
                        android:textSize="14dp"
                        android:visibility="gone"
                        style="?android:attr/borderlessButtonStyle"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skipp"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        android:textSize="17dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>